--- a/src/App.css
+++ b/src/App.css
@@ -22,6 +22,7 @@ body {
 }
 
 .container {
+    width: 95vw;
     width: min(95vw, 500px);
     background-color: white;
     -webkit-box-shadow: 2px 2px 5px 2px rgba(0, 0, 0, .075);
@@ -36,6 +37,7 @@ body {
 }
 
 .App-header {
+    width: 95vw;
     width: min(95vw, 500px);
     background-color: white;
     display: flex;
@@ -102,6 +104,7 @@ input[type="number"] {
 .main-con ol {
     list-style: none;
     padding: 0;
+    width: 95vw;
     width: min(95vw, 500px);
 }
 
