--- a/src/App.css
+++ b/src/App.css
@@ -11,13 +11,14 @@ body {
 }
 
 .App-logo {
-    height: 100px;
+    width: 80%;
     pointer-events: none;
+
 }
 
 @media (prefers-reduced-motion: no-preference) {
     .App-logo {
-        animation: App-logo-spin infinite 20s linear;
+        /*animation: App-logo-spin infinite 20s linear;*/
     }
 }
 
@@ -52,6 +53,10 @@ body {
     box-sizing: border-box;
 }
 
+.about{
+    transform: scale(0.8);
+}
+
 h1 {
     margin: 0;
     font-size: 35px;
@@ -60,14 +65,14 @@ h1 {
 
 h2 {
     margin: 0;
-    font-size: 20px;
+    font-size: 15px;
     font-weight: normal;
 
 }
 
 .App-header p {
     margin: 0;
-    font-size: 16px;
+    font-size: 12px;
     font-weight: normal;
 }
 
