--- a/src/App.css
+++ b/src/App.css
@@ -28,13 +28,19 @@ body {
     background-color: white;
     -webkit-box-shadow: 2px 2px 5px 2px rgba(0, 0, 0, .075);
     box-shadow: 2px 2px 5px 2px rgba(0, 0, 0, .075);
-    margin: 0;
+    margin: 8px 0;
 }
 
 .tips {
     padding: 8px;
     box-sizing: border-box;
     border-top: 4px #d3b126 solid;
+}
+
+.tips-red {
+    padding: 8px;
+    box-sizing: border-box;
+    border-top: 4px #FF9DA4 solid;
 }
 
 .App-header {
